# furry-yob

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: App.h
include/Core/: Collider.h  DynamicBody.h  EntityManager.h  Hitscan.h  InputManager.h  Item.h  LevelManager.h  MapManager.h  ResourceManager.h  SceneManager.h
include/Core/Managers/: ColorManager.h  EntityManager.h  ItemManager.h  LevelManager.h  SceneManager.h  ThemeManager.h
include/Entities/: DynamicBody.h  Enemy.h  Entity.h  Hitscan.h  Item.h  Player.h  Projectile.h
include/Entities/Enemies/: Enemy000.h  Enemy001.h  Enemy002.h  Enemy003.h  Enemy004.h
include/Scenes/: GameScene.h  Scene.h
include/Utils/: Types.h  Vector.h
resources/: colors.txt  encore.txt  pastel.txt  theme.txt
resources/maps/: map1.txt  map2.txt  map3.txt  map_000.txt
resources/themes/: theme.txt
scripts/: main.py  map.txt
src/: App.cpp  main.cpp
src/Core/: App.cpp  Collider.cpp  ColorManager.cpp  DynamicBody.cpp  EntityManager.cpp  Hitscan.cpp  InputManager.cpp  Item.cpp  LevelManager.cpp  MapManager.cpp  ResourceManager.cpp  Scene.cpp  SceneManager.cpp
src/Core/Managers/: ColorManager.cpp  EntityManager.cpp  InputManager.cpp  ItemManager.cpp  LevelManager.cpp  ResourceManager.cpp  SceneManager.cpp  ThemeManager.cpp
src/Entities/: DynamicBody.cpp  Enemy.cpp  Entity.cpp  Hitscan.cpp  Item.cpp  Player.cpp  Projectile.cpp
src/Entities/Enemies/: Enemy000.cpp  Enemy001.cpp  Enemy002.cpp  Enemy003.cpp  Enemy004.cpp
src/Scenes/: GameScene.cpp  Scene.cpp
src/Utils/: Types.cpp  Vector.cpp
